compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_10_aliases_parsed_content.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: json
---
{
  "parsed_project": {
    "units": [
      {
        "global_vars": [],
        "var_config": [],
        "pous": [
          {
            "id": 5,
            "name": "fnThatUsesAliases",
            "kind": "Function",
            "variable_blocks": [
              {
                "access": "Protected",
                "constant": false,
                "retain": false,
                "variables": [
                  {
                    "name": "varStringInput",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "T_String",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 15,
                                "column": 24,
                                "offset": 246
                              },
                              "end": {
                                "line": 15,
                                "column": 32,
                                "offset": 254
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 15,
                            "column": 8,
                            "offset": 230
                          },
                          "end": {
                            "line": 15,
                            "column": 22,
                            "offset": 244
                          }
                        }
                      },
                      "file": {
                        "File": "aliases.pli"
                      }
                    }
                  },
                  {
                    "name": "varDIntInput",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "T_DInt",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 16,
                                "column": 22,
                                "offset": 278
                              },
                              "end": {
                                "line": 16,
                                "column": 28,
                                "offset": 284
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 16,
                            "column": 8,
                            "offset": 264
                          },
                          "end": {
                            "line": 16,
                            "column": 20,
                            "offset": 276
                          }
                        }
                      },
                      "file": {
                        "File": "aliases.pli"
                      }
                    }
                  },
                  {
                    "name": "varArrayOfIntInput",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "T_Array",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 17,
                                "column": 28,
                                "offset": 314
                              },
                              "end": {
                                "line": 17,
                                "column": 35,
                                "offset": 321
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 17,
                            "column": 8,
                            "offset": 294
                          },
                          "end": {
                            "line": 17,
                            "column": 26,
                            "offset": 312
                          }
                        }
                      },
                      "file": {
                        "File": "aliases.pli"
                      }
                    }
                  },
                  {
                    "name": "varBoolInput",
                    "data_type_declaration": {
                      "Reference": {
                        "referenced_type": "T_Bool",
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 18,
                                "column": 22,
                                "offset": 345
                              },
                              "end": {
                                "line": 18,
                                "column": 28,
                                "offset": 351
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        }
                      }
                    },
                    "initializer": null,
                    "address": null,
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 18,
                            "column": 8,
                            "offset": 331
                          },
                          "end": {
                            "line": 18,
                            "column": 20,
                            "offset": 343
                          }
                        }
                      },
                      "file": {
                        "File": "aliases.pli"
                      }
                    }
                  }
                ],
                "kind": {
                  "Input": "ByVal"
                },
                "linkage": "Internal",
                "location": {
                  "span": {
                    "Range": {
                      "start": {
                        "line": 14,
                        "column": 4,
                        "offset": 212
                      },
                      "end": {
                        "line": 14,
                        "column": 13,
                        "offset": 221
                      }
                    }
                  },
                  "file": {
                    "File": "aliases.pli"
                  }
                }
              }
            ],
            "return_type": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 13,
                    "column": 4,
                    "offset": 181
                  },
                  "end": {
                    "line": 20,
                    "column": 16,
                    "offset": 381
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 13,
                    "column": 13,
                    "offset": 190
                  },
                  "end": {
                    "line": 13,
                    "column": 30,
                    "offset": 207
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "poly_mode": null,
            "generics": [],
            "linkage": "Internal",
            "super_class": null,
            "is_const": false,
            "interfaces": [],
            "properties": []
          }
        ],
        "implementations": [
          {
            "name": "fnThatUsesAliases",
            "type_name": "fnThatUsesAliases",
            "linkage": "Internal",
            "pou_type": "Function",
            "statements": [],
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 20,
                    "column": 4,
                    "offset": 369
                  },
                  "end": {
                    "line": 19,
                    "column": 11,
                    "offset": 364
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "name_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 13,
                    "column": 13,
                    "offset": 190
                  },
                  "end": {
                    "line": 13,
                    "column": 30,
                    "offset": 207
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "end_location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 20,
                    "column": 4,
                    "offset": 369
                  },
                  "end": {
                    "line": 20,
                    "column": 16,
                    "offset": 381
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "overriding": false,
            "generic": false,
            "access": null
          }
        ],
        "interfaces": [],
        "user_types": [
          {
            "data_type": {
              "StringType": {
                "name": "T_String",
                "is_wide": false,
                "size": {
                  "stmt": {
                    "Literal": {
                      "Integer": 50
                    }
                  },
                  "id": 1,
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 1,
                          "column": 27,
                          "offset": 28
                        },
                        "end": {
                          "line": 1,
                          "column": 29,
                          "offset": 30
                        }
                      }
                    },
                    "file": {
                      "File": "aliases.pli"
                    }
                  },
                  "metadata": null
                }
              }
            },
            "initializer": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 1,
                    "column": 9,
                    "offset": 10
                  },
                  "end": {
                    "line": 1,
                    "column": 17,
                    "offset": 18
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "scope": null
          },
          {
            "data_type": {
              "SubRangeType": {
                "name": "T_DInt",
                "referenced_type": "DINT",
                "bounds": null
              }
            },
            "initializer": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 4,
                    "column": 9,
                    "offset": 56
                  },
                  "end": {
                    "line": 4,
                    "column": 15,
                    "offset": 62
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "scope": null
          },
          {
            "data_type": {
              "ArrayType": {
                "name": "T_Array",
                "bounds": {
                  "stmt": {
                    "RangeStatement": {
                      "start": {
                        "stmt": {
                          "Literal": {
                            "Integer": 0
                          }
                        },
                        "id": 2,
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 7,
                                "column": 25,
                                "offset": 110
                              },
                              "end": {
                                "line": 7,
                                "column": 26,
                                "offset": 111
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        },
                        "metadata": null
                      },
                      "end": {
                        "stmt": {
                          "Literal": {
                            "Integer": 11
                          }
                        },
                        "id": 3,
                        "location": {
                          "span": {
                            "Range": {
                              "start": {
                                "line": 7,
                                "column": 28,
                                "offset": 113
                              },
                              "end": {
                                "line": 7,
                                "column": 30,
                                "offset": 115
                              }
                            }
                          },
                          "file": {
                            "File": "aliases.pli"
                          }
                        },
                        "metadata": null
                      }
                    }
                  },
                  "id": 4,
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 7,
                          "column": 25,
                          "offset": 110
                        },
                        "end": {
                          "line": 7,
                          "column": 30,
                          "offset": 115
                        }
                      }
                    },
                    "file": {
                      "File": "aliases.pli"
                    }
                  },
                  "metadata": null
                },
                "referenced_type": {
                  "Reference": {
                    "referenced_type": "INT",
                    "location": {
                      "span": {
                        "Range": {
                          "start": {
                            "line": 7,
                            "column": 35,
                            "offset": 120
                          },
                          "end": {
                            "line": 7,
                            "column": 38,
                            "offset": 123
                          }
                        }
                      },
                      "file": {
                        "File": "aliases.pli"
                      }
                    }
                  }
                },
                "is_variable_length": false
              }
            },
            "initializer": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 7,
                    "column": 9,
                    "offset": 94
                  },
                  "end": {
                    "line": 7,
                    "column": 16,
                    "offset": 101
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "scope": null
          },
          {
            "data_type": {
              "SubRangeType": {
                "name": "T_Bool",
                "referenced_type": "BOOL",
                "bounds": null
              }
            },
            "initializer": null,
            "location": {
              "span": {
                "Range": {
                  "start": {
                    "line": 10,
                    "column": 9,
                    "offset": 148
                  },
                  "end": {
                    "line": 10,
                    "column": 15,
                    "offset": 154
                  }
                }
              },
              "file": {
                "File": "aliases.pli"
              }
            },
            "scope": null
          }
        ],
        "file": {
          "File": "aliases.pli"
        }
      }
    ]
  },
  "context": {
    "sources": {
      "aliases.pli": {
        "source": "\n    TYPE T_String : STRING[50];\n    END_TYPE\n\n    TYPE T_DInt : DINT;\n    END_TYPE\n\n    TYPE T_Array : ARRAY[0..11] OF INT;\n    END_TYPE\n\n    TYPE T_Bool : BOOL;\n    END_TYPE\n\n    FUNCTION fnThatUsesAliases\n    VAR_INPUT\n        varStringInput: T_String;\n        varDIntInput: T_DInt;\n        varArrayOfIntInput: T_Array;\n        varBoolInput: T_Bool;\n    END_VAR\n    END_FUNCTION\n    ",
        "path": "aliases.pli"
      }
    },
    "provider": {
      "current_id": 6
    },
    "error_fmt": "Rich"
  }
}
