compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_12_void_pointers_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef VOID_POINTERS_H_
#define VOID_POINTERS_H_

#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include <time.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct {
    uint64_t* __vtable;
    uint64_t* _Internal_;
} ASYNC_Task_type;

void ASYNC_Task(ASYNC_Task_type* self);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !VOID_POINTERS_H_ */
